--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.xr.interaction.toolkit": "2.4.1",
     "com.unity.xr.management": "4.3.3",
     "com.unity.xr.openxr": "1.7.0",
+    "com.utj.rendertexturecamera": "https://github.com/katsumasa/RenderTextureCamera.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
